[gd_scene load_steps=5 format=3 uid="uid://cl33hywvxedbc"]

[ext_resource type="Script" uid="uid://dwvcnghb8xsl1" path="res://Scene/start_screen.gd" id="1_8p3s2"]
[ext_resource type="Texture2D" uid="uid://p8ipn0fia7qc" path="res://Sprites/Background/example.png" id="1_r3xyu"]
[ext_resource type="Theme" uid="uid://g0gy1fii84di" path="res://Scene/DefaultButtons.tres" id="2_bvmop"]
[ext_resource type="Texture2D" uid="uid://crl4dntymcme2" path="res://Sprites/Menu/logo 2.png" id="2_r3xyu"]

[node name="startScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8p3s2")

[node name="bG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_r3xyu")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_bvmop")
text = "Novo Jogo"

[node name="Scores" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_bvmop")
text = "High Scores"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_bvmop")
text = "Sair"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_r3xyu")
expand_mode = 3
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Scores" to="." method="_on_scores_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
